--- a/src/scss/utilities/_utility-texts.scss
+++ b/src/scss/utilities/_utility-texts.scss
@@ -72,21 +72,17 @@
 .bf-t-truncate--multiline-2 {
   overflow: hidden !important;
   text-overflow: ellipsis !important;
-  white-space: nowrap !important;
   display: -webkit-box !important;
   -webkit-line-clamp: 2 !important;
   -webkit-box-orient: vertical !important;
-  white-space: normal !important;
 }
 
 .bf-t-truncate--multiline-3 {
   overflow: hidden !important;
   text-overflow: ellipsis !important;
-  white-space: nowrap !important;
   display: -webkit-box !important;
   -webkit-line-clamp: 3 !important;
   -webkit-box-orient: vertical !important;
-  white-space: normal !important;
 }
 
 
